# c2pa-warc

./: Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  scorecard.yml
examples/: make_sample_warc.rs  sample.warc
src/: error.rs  lib.rs  reader.rs  record.rs  writer.rs
