[package]
name = "c2pa-warc"
version = "0.1.0"
edition = "2021"
description = "C2PA manifest embedding for WARC web archive files (ISO 28500)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/writerslogic/c2pa-warc"
keywords = ["c2pa", "provenance", "warc", "web-archive"]
categories = ["encoding", "parser-implementations"]

[dependencies]
